Fixed overlap on slideshow

--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ a{
   font-size: 15px;
   padding-top: 4px;
   padding-bottom: 4px;
+  bottom: 4px;
   position: absolute;
   width: 100%;
   text-align: center;
